--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "author": "Kevin Gutowski <kgutowski@berkeley.edu>",
   "dependencies": {
-    "@skpm/dialog": "^0.4.0"
+    "@skpm/dialog": "^0.4.0",
+    "@skpm/fs": "^0.2.5"
   }
 }
