Remove sketch json package

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "author": "Kevin Gutowski <kgutowski@berkeley.edu>",
   "dependencies": {
     "@skpm/dialog": "^0.4.0",
-    "@skpm/fs": "^0.2.5",
-    "@skpm/sketchapp-json-plugin": "^0.2.0"
+    "@skpm/fs": "^0.2.5"
   }
 }
