--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sketch-export-presets",
-  "description": "",
+  "description": "Import and Save Sketch Export Preferences",
   "version": "0.1.0",
   "engines": {
     "sketch": ">=49.0"
@@ -23,7 +23,11 @@
   "devDependencies": {
     "@skpm/builder": "^0.7.0"
   },
-  "author": "Kevin Gutowski <kgutowski@berkeley.edu>",
+  "author": "Kevin Gutowski",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KevinGutowski/Sketch-Export-Presets"
+  },
   "dependencies": {
     "@skpm/dialog": "^0.4.0",
     "@skpm/fs": "^0.2.5"
