Get rid of Sketch presets

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,7 @@
     }
   ],
   "menu": {
-    "title": "Sketch Export Presets",
+    "title": "Sketch Export Prefs",
     "items": [
       "save-export-prefs",
       "import-export-prefs",
