--- a/sketch-export-preferences.sketchplugin/Contents/Sketch/manifest.json
+++ b/sketch-export-preferences.sketchplugin/Contents/Sketch/manifest.json
@@ -14,7 +14,7 @@
     }
   ],
   "menu": {
-    "title": "Sketch Export Presets",
+    "title": "Sketch Export Prefs",
     "items": [
       "save-export-prefs",
       "import-export-prefs",
